apps/base/bazarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  labels:
    app: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: node2
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          ports:
            - containerPort: 6767
          volumeMounts:
            - name: bazarr-config
              mountPath: /config
            - name: bazarr-media
              mountPath: /media
      volumes:
        - name: bazarr-config
          persistentVolumeClaim:
            claimName: bazarr-config-pvc
        - name: bazarr-media
          persistentVolumeClaim:
            claimName: bazarr-media-pvc
