apps/base/bazarr/ingressroute.yaml
# TLS via cert-manager (Cloudflare DNS-01). Traefik IngressRoute; local-only.
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: bazarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.joesabbagh.com`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
  tls:
    secretName: bazarr-tls
